--- a/ingress-host.yaml
+++ b/ingress-host.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host: "hello-world.oppna.system"
+  - host: "hello-world.oppna.ai"
     http:
       paths:
       - path: /
